--- a/SpringBootGroovyDemo/src/main/resources/application.properties
+++ b/SpringBootGroovyDemo/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.devtools.livereload.enabled=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/microservices
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root123
 spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=10
+
+# Spring Security OAuth2 settings
+spring.security.oauth2.authorizationserver.enabled=true
